Fix text overflow issues and style buttons

--- a/src/components/RedditPost/RedditPost.scss
+++ b/src/components/RedditPost/RedditPost.scss
@@ -43,6 +43,10 @@
     max-height: 9rem;
     overflow: auto;
 
+    .small {
+      max-height: 2.25rem;
+    }
+
     .title {
       margin: 0;
       height: max-content;
