--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -2,4 +2,26 @@
   height: calc(100% - 2rem);
   margin: 1rem;
   overflow-y: scroll;
+
+  button {
+    margin: 0 0.25rem 0.25rem 0;
+  }
+
+  .text-field {
+    width: 7rem;
+    border: 1px solid #85adb9;
+    border-radius: 1rem;
+    color: #5d92a2;
+    padding: 0.25rem 0.5rem;
+    margin-right: 0.25rem;
+  }
+
+  .trending-title {
+    font-variant: small-caps;
+    margin: 0 0 0.5rem 0;
+  }
+
+  .trending-container {
+    max-height: 3.5rem;
+  }
 }
