--- a/src/components/Tile/Tile.scss
+++ b/src/components/Tile/Tile.scss
@@ -9,7 +9,7 @@
 
   -webkit-box-shadow: 0.1rem 0.1rem 0.5rem #b8cfd6;
   -moz-box-shadow: 0.1rem 0.1rem 0.5rem #b8cfd6;
-  box-shadow: 0.1rem 0.1rem 0.5rem #b8cfd6;
+  box-shadow: 0.15rem 0.15rem 0.5rem #b8cfd6;
 
   .content {
     flex: 1;
