--- a/src/index.scss
+++ b/src/index.scss
@@ -36,3 +36,16 @@ h6 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+button {
+  border: 1px solid #85adb9;
+  border-radius: 1rem;
+  color: #5d92a2;
+  background-color: #f3f7f8;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #e6eef1;
+  }
+}
